# kafkalogger

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
confluent_kafka_logger/: exceptions.py  handlers.py
kafkalogger/: exceptions.py  handlers.py
