[metadata]
name = kafkalogger
version = attr:kafkalogger.__version__
author = dmoiseev
author-email =
description-file = README.md
long_description_content_type = text/markdown
home-page = https://github.com/lobziik/kafkalogger
license='GPLv3'
keywords =
    kafka
    logging
    logger
    kafka-logger
    logs
    log
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent'
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[flake8]
ignore = E128,E811,E731,W503
max-line-length = 100

[options]
zip_safe = False
packages = find:
install_requires =
   confluent_kafka

setup_requires =
    setuptools_scm>=3.0.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pre-commit
